# SpanContainers

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
benchmarks/: Benchmarks.cpp  CMakeLists.txt  RNG.h  RandomDataFixture.h  RandomWalkBenchmarks.h
doc/: Doxyfile
doc/html/: _buffer_selector_8h_source.html  _container_errors_8h_source.html  _empty_container_error_8h_source.html  _exceeds_capacity_error_8h_source.html  _exception_formatter_8h_source.html  _fixed_size_container_8h_source.html  _formattable_exception_8h_source.html  _formattable_span_container_8h_source.html  _full_container_error_8h_source.html  _heap_array_8h_source.html  _index_out_of_range_error_8h_source.html  _index_trait_8h_source.html  _insufficent_items_error_8h_source.html  _pop_back_trait_8h_source.html  _pop_front_trait_8h_source.html  _push_back_trait_8h_source.html  _push_front_trait_8h_source.html  _push_straight_trait_8h_source.html  _span_container_8h_source.html  _span_container_concept_8h_source.html  _span_container_format_8h_source.html  _span_container_formatter_8h_source.html  _span_container_macros_8h_source.html  _span_dequeue_8h_source.html  _span_heap_8h_source.html  _span_queue_8h_source.html  _span_stack_8h_source.html  annotated.html  class_span_containers_1_1_empty_container_error-members.html  class_span_containers_1_1_empty_container_error.html  class_span_containers_1_1_exceeds_capacity_error-members.html  class_span_containers_1_1_exceeds_capacity_error.html  class_span_containers_1_1_full_container_error-members.html  class_span_containers_1_1_full_container_error.html  class_span_containers_1_1_index_out_of_range_error-members.html  class_span_containers_1_1_index_out_of_range_error.html  class_span_containers_1_1_insufficent_items_error-members.html  class_span_containers_1_1_insufficent_items_error.html  class_span_containers_1_1_span_dequeue-members.html  class_span_containers_1_1_span_dequeue.html  (+69 more)
doc/latex/: _buffer_selector_8h_source.tex  _container_errors_8h_source.tex  _empty_container_error_8h_source.tex  _exceeds_capacity_error_8h_source.tex  _exception_formatter_8h_source.tex  _fixed_size_container_8h_source.tex  _formattable_exception_8h_source.tex  _formattable_span_container_8h_source.tex  _full_container_error_8h_source.tex  _heap_array_8h_source.tex  _index_out_of_range_error_8h_source.tex  _index_trait_8h_source.tex  _insufficent_items_error_8h_source.tex  _pop_back_trait_8h_source.tex  _pop_front_trait_8h_source.tex  _push_back_trait_8h_source.tex  _push_front_trait_8h_source.tex  _push_straight_trait_8h_source.tex  _span_container_8h_source.tex  _span_container_concept_8h_source.tex  _span_container_format_8h_source.tex  _span_container_formatter_8h_source.tex  _span_container_macros_8h_source.tex  _span_dequeue_8h_source.tex  _span_heap_8h_source.tex  _span_queue_8h_source.tex  _span_stack_8h_source.tex  annotated.tex  class_span_containers_1_1_empty_container_error.eps  class_span_containers_1_1_empty_container_error.tex  class_span_containers_1_1_exceeds_capacity_error.eps  class_span_containers_1_1_exceeds_capacity_error.tex  class_span_containers_1_1_full_container_error.eps  class_span_containers_1_1_full_container_error.tex  class_span_containers_1_1_index_out_of_range_error.eps  class_span_containers_1_1_index_out_of_range_error.tex  class_span_containers_1_1_insufficent_items_error.eps  class_span_containers_1_1_insufficent_items_error.tex  class_span_containers_1_1_span_dequeue.eps  class_span_containers_1_1_span_dequeue.tex  (+45 more)
lib/: ContainerErrors.h  SpanContainerFormat.h  SpanContainerFormatter.h  SpanDequeue.h  SpanHeap.h  SpanQueue.h  SpanStack.h  SpanVector.h  push_insert_iterator.h
lib/Errors/: EmptyContainerError.h  ExceedsCapacityError.h  ExceptionFormatter.h  FullContainerError.h  IndexOutOfRangeError.h  InsertIndexOutOfRangeError.h  InsufficentItemsError.h
lib/internal/: BufferSelector.h  CircularIndex.h  FixedSizeContainer.h  FormattableException.h  FormattableSpanContainer.h  HeapArray.h  SpanContainer.h  (+1 more)
src/: CMakeLists.txt  Demo.cpp
tests/: BaseTests.h  BufferSelectorTests.cc  CMakeLists.txt  CircularContainerTests.h  ContainerTestAdaptor.h  ContainerTestFixture.h  ContainerTestTraits.h  EmptyContainerTestFixture.h  HeapArrayTests.cc  IndexedContainerTests.h  SequentialSpanContainersDeathTests.cc  SequentialSpanContainersTests.cc  SpanContainerBackTests.h  SpanContainerBaseTests.h  SpanContainerFrontTests.h  SpanContainerPushBackPopBackTests.h  SpanContainerPushBackPopFrontTests.h  SpanContainerPushBackTests.h  SpanContainerPushFrontPopBackTests.h  SpanContainerPushFrontPopFrontTests.h  SpanContainerPushFrontTests.h  SpanContainerPushTestFixture.h  SpanContainerTests.cc  SpanContainerTypesTest.cc  SpanDequeueDeathTests.cc  SpanDequeueTests.cc  SpanHeapDeathTests.cc  SpanHeapTests.cc  SpanQueueDeathTests.cc  SpanQueueTests.cc  SpanStackDeathTests.cc  SpanStackTests.cc  TypedContainerDeathTests.h  TypedContainerTests.h
(+84 files in other folders)
